# XAI-project

./: .gitignore  README.md  Series - Python.html  Series - Python.ipynb  pyproject.toml
data/: X_test_data.csv  X_train_data.csv  series_data_prepared.csv  y_test_data.csv  y_train_data.csv
models/: shows_rf_all_vars.pkl  shows_rf_limited_vars.pkl  shows_xgb_all_vars.joblib  shows_xgb_all_vars.pkl  shows_xgb_limited_vars.joblib  shows_xgb_limited_vars.pkl
notebooks/: 01_data_preparation.ipynb  02_eda_and_modeling.ipynb  03_XAI.ipynb
