[project]
name = "xai-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.2.0",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.1.7",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xgboost>=2.1.4",
]
