[project]
name = "xai-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alibi>=0.5.5",
    "dalex>=1.7.2",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "lime>=0.2.0.1",
    "matplotlib>=3.9.4",
    "matplotlib-inline>=0.1.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "vadersentiment>=3.3.2",
    "xgboost>=2.1.4",
    "ydata-profiling>=4.16.1",
]
